Closed Bug 1883512 Opened 4 months ago Closed 4 months ago

netwerk/base/nsNetUtil.cpp:99:10: fatal error: 'nsIconURI.h' file not found

Categories

(Core :: Networking, defect, P2)

Unspecified
iOS
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Building with --enable-project=mobile/ios fails with, among other things:

/tmp/gecko-ios/netwerk/base/nsNetUtil.cpp:99:10: fatal error: 'nsIconURI.h' file not found
   99 | #include "nsIconURI.h"
      |          ^~~~~~~~~~~~~
Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/a867027cdde6
uikit doesn't support moz-icon yet. r=necko-reviewers,valentin
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: