Bug 1883512 - uikit doesn't support moz-icon yet. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D203526